
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int CMD ;
 int err_exit (char*) ;
 scalar_t__ send (int,int ,int ,int ) ;
 int strlen (int ) ;

void sendcmd(int sock) {
 if (send(sock,CMD,strlen(CMD),0)<0) {
  err_exit("-> send() error");
 }
}
