; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23183.c_sendcmd.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23183.c_sendcmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CMD = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"-> send() error\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sendcmd(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @CMD, align 4
  %5 = load i32, i32* @CMD, align 4
  %6 = call i32 @strlen(i32 %5)
  %7 = call i64 @send(i32 %3, i32 %4, i32 %6, i32 0)
  %8 = icmp slt i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = call i32 @err_exit(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  br label %11

11:                                               ; preds = %9, %1
  ret void
}

declare dso_local i64 @send(i32, i32, i32, i32) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i32 @err_exit(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
